--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -29,7 +29,7 @@
 
                 <fieldset>
                     <label for="role">Role</label>
-                <select class="form-select" aria-label="Default select example">
+                <select class="form-select" name="role" aria-label="Default select example">
                     <option value="Doctor">Doctor</option>
                     <option value="Patient">Patient</option>
                     <option value="Student">Student</option>
